--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/stockdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/stockdynamic.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox prefHeight="70.0" prefWidth="658.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefHeight="70.0" prefWidth="658.0" stylesheets="@../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane HBox.hgrow="ALWAYS">
             <children>
@@ -20,11 +20,6 @@
                 <Label id="qtyfield" fx:id="qtyfield" alignment="CENTER" prefHeight="70.0" prefWidth="68.0" text="Qty" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="530.0" layoutY="10.0" HBox.hgrow="ALWAYS">
-            <children>
-                <Label id="orderstatfield" fx:id="orderstatfield" alignment="CENTER" prefHeight="70.0" prefWidth="117.0" text="Order Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            </children>
-        </AnchorPane>
         <AnchorPane layoutX="501.0" layoutY="10.0" HBox.hgrow="ALWAYS">
             <children>
                 <Label id="lastupfield" fx:id="lastupfield" alignment="CENTER" prefHeight="70.0" prefWidth="115.0" text="Last Updated" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
@@ -32,13 +27,21 @@
         </AnchorPane>
         <AnchorPane layoutX="386.0" layoutY="10.0" HBox.hgrow="ALWAYS">
             <children>
-                  <Label id="stocklvlfield" fx:id="stocklvlfield" alignment="CENTER" prefHeight="70.0" prefWidth="58.0" style="-fx-background-color: #0095FF; -fx-background-radius: 10;" text="LOW" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <Label id="stocklvlfield" fx:id="stocklvlfield" alignment="CENTER" prefHeight="70.0" prefWidth="58.0" styleClass="stockalert-level-low" text="LOW" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
          <HBox.margin>
             <Insets />
          </HBox.margin>
          <padding>
             <Insets bottom="20.0" top="20.0" />
+         </padding>
+        </AnchorPane>
+        <AnchorPane layoutX="530.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+         <children>
+                <Label id="orderstatfield" fx:id="orderstatfield" alignment="CENTER" layoutX="13.0" layoutY="20.0" styleClass="stockalert-status-on" text="Order Status" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
          </padding>
         </AnchorPane>
         <AnchorPane layoutX="108.0" layoutY="10.0" maxWidth="50.0" minWidth="50.0" HBox.hgrow="ALWAYS">
