--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -56,7 +56,7 @@
                <children>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../images/adminicons/weathericons/moon_icon.png" />
+                        <Image url="@../../../images/adminicons/weathericons/sunny_icon.png" />
                      </image>
                   </ImageView>
                   <Label fx:id="date" text="27-09-2024" textAlignment="CENTER" />
@@ -70,75 +70,75 @@
       </HBox>
    </top>
    <left>
-      <AnchorPane prefWidth="190.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
+      <AnchorPane prefWidth="190.0" styleClass="side-container" BorderPane.alignment="CENTER">
          <children>
             <AnchorPane layoutY="-5.0" prefHeight="655.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <ImageView fitHeight="74.0" fitWidth="68.0" layoutX="77.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="77.0" AnchorPane.rightAnchor="65.0" AnchorPane.topAnchor="14.0">
+                  <ImageView fitHeight="74.0" fitWidth="68.0" layoutX="72.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="72.0" AnchorPane.rightAnchor="71.0" AnchorPane.topAnchor="0.0">
                      <image>
                         <Image url="@../../../images/adminicons/account_user_icon.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="greeting" contentDisplay="CENTER" layoutX="71.0" layoutY="103.0" styleClass="hello-label-admin" text="Hello, Admin" AnchorPane.topAnchor="103.0" />
-                  <Label layoutX="63.0" layoutY="130.0" text="Welcome," AnchorPane.leftAnchor="80.0" />
-                  <Label layoutX="63.0" layoutY="148.0" text="Have a nice day" />
+                  <Label fx:id="greeting" contentDisplay="CENTER" layoutX="51.0" layoutY="85.0" styleClass="hello-label" text="Hello, Admin" AnchorPane.topAnchor="85.0" />
+                  <Label layoutX="78.5" layoutY="121.0" styleClass="message-label" text="Welcome," AnchorPane.leftAnchor="78.5" />
+                  <Label layoutX="63.0" layoutY="136.0" styleClass="message-label" text="Have a nice day" AnchorPane.leftAnchor="63.0" />
+                  <VBox layoutY="187.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="192.0">
+                     <children>
+                        <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="home-button" text="Home">
+                           <graphic>
+                              <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../images/adminicons/blue_home_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Users">
+                           <graphic>
+                              <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../images/adminicons/users_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="menubutton" mnemonicParsing="false" onAction="#onMenuButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Menu">
+                           <graphic>
+                              <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../images/adminicons/menu_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Stock">
+                           <graphic>
+                              <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../images/adminicons/box_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Analytics">
+                           <graphic>
+                              <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../images/adminicons/analytics_icon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </VBox>
                </children>
             </AnchorPane>
-            <Line endX="85.0" layoutX="116.0" layoutY="202.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" />
-            <VBox layoutX="-1.0" layoutY="215.0" prefHeight="200.0" prefWidth="210.0" AnchorPane.leftAnchor="-1.0" AnchorPane.topAnchor="215.0">
-               <children>
-                  <Button fx:id="homebutton" mnemonicParsing="false" onAction="#onHomeButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="home-button" text="Home">
-                     <graphic>
-                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../images/adminicons/blue_home_icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </Button>
-                  <Button fx:id="usersbutton" mnemonicParsing="false" onAction="#onUsersButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Users">
-                     <graphic>
-                        <ImageView fitHeight="19.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../images/adminicons/users_icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="menubutton" mnemonicParsing="false" onAction="#onMenuButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Menu">
-                     <graphic>
-                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../images/adminicons/menu_icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="stockbutton" mnemonicParsing="false" onAction="#onStockButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Stock">
-                     <graphic>
-                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../images/adminicons/box_icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                  <Button fx:id="analyticsbutton" mnemonicParsing="false" onAction="#onAnalyticsButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Analytics">
-                     <graphic>
-                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../../images/adminicons/analytics_icon.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </VBox>
-            <Line endX="85.0" layoutX="111.0" layoutY="426.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" />
-            <Button fx:id="settingsbutton" layoutY="435.0" mnemonicParsing="false" onAction="#onSettingsButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Settings">
+            <Line endX="85.0" layoutX="112.5" layoutY="182.0" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="182.0" />
+            <Line endX="85.0" layoutX="112.5" layoutY="399.5" startX="-100.0" stroke="#4a85f6" strokeWidth="0.5" styleClass="line" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="13.0" AnchorPane.topAnchor="402.0" />
+            <Button fx:id="settingsbutton" layoutY="414.0" mnemonicParsing="false" onAction="#onSettingsButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="side-bar-button" text="Settings" AnchorPane.topAnchor="412.0">
                <graphic>
                   <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -149,7 +149,7 @@
             </Button>
             <VBox alignment="CENTER" layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                <children>
-                  <Button fx:id="logoutbutton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" styleClass="logout-button-admin" text="Logout">
+                  <Button fx:id="logoutbutton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="210.0" styleClass="logout-button" text="Logout">
                      <graphic>
                         <ImageView fitHeight="22.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -178,7 +178,7 @@
          <children>
             <FlowPane hgap="10.0" prefHeight="655.0" prefWidth="1070.0" prefWrapLength="1.0E7" vgap="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <VBox minHeight="300.0" minWidth="600.0">
+                  <VBox minHeight="300.0" minWidth="590.0">
                      <children>
                         <Label text="Notes" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
@@ -212,7 +212,7 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox minHeight="300.0" minWidth="420.0">
+                  <VBox minHeight="300.0" minWidth="427.0">
                      <children>
                         <Label text="Stock" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
@@ -275,12 +275,12 @@
                         </VBox>
                      </children>
                   </VBox>
-                  <VBox layoutX="20.0" layoutY="340.0" minHeight="300.0" minWidth="200.0">
+                  <VBox layoutX="20.0" layoutY="340.0" minHeight="300.0" minWidth="254.0">
                      <children>
                         <Label text="TOP 5 Sellers" />
                         <VBox styleClass="widget-container" VBox.vgrow="ALWAYS">
                            <children>
-                              <ListView fx:id="topsellerslistview" prefHeight="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
+                              <ListView fx:id="topsellerslistview" prefHeight="281.0" prefWidth="249.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
                            </children>
                         </VBox>
                      </children>
