--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/notesdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/notesdynamic.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox prefHeight="50.0" prefWidth="598.0" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="50.0" maxWidth="590.0" minHeight="50.0" minWidth="590.0" prefHeight="50.0" prefWidth="590.0" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane maxHeight="50.0" maxWidth="100.0" prefHeight="50.0" prefWidth="100.0">
             <children>
