--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/stockalertdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/homedynamics/stockalertdynamic.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox maxWidth="418.0" minWidth="418.0" prefHeight="50.0" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="50.0" maxWidth="427.0" minHeight="50.0" minWidth="427.0" prefHeight="50.0" prefWidth="427.0" stylesheets="@../../../style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <AnchorPane prefHeight="50.0" prefWidth="149.0" HBox.hgrow="ALWAYS">
             <children>
