--- a/src/main/resources/teampixl/com/pixlpos/fxml/style.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/style.css
@@ -1,4 +1,3 @@
-
 /* ============================Container styling============================= */
 .top-container {
     -fx-background-color: white;
@@ -35,13 +34,12 @@
 
 }
 
-.list-pane {
-    -fx-background-color: white;
-    -fx-border-color: #white;
-    -fx-background-radius: 10;
-    -fx-border-radius: 10px;
-}
-
+/*.list-pane {*/
+/*    -fx-background-color: white;*/
+/*    -fx-border-color: #white;*/
+/*    -fx-background-radius: 10;*/
+/*    -fx-border-radius: 10px;*/
+/*}*/
 
 
 .list-cell:even,
@@ -60,10 +58,10 @@
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
 }
-#orderitemslistview .list-cell:selected {
-    -fx-background-color: #8f9bb3;
-    -fx-text-fill: black;
-}
+/*#orderitemslistview .list-cell:selected {*/
+/*    -fx-background-color: #8f9bb3;*/
+/*    -fx-text-fill: black;*/
+/*}*/
 
 #orderitemslistview .list-cell {
     -fx-text-fill: black;
@@ -86,10 +84,6 @@
     -fx-padding: 0;
 }
 
-.list-pane .scroll-bar:horizontal {
-    -fx-opacity: 0;      /* Makes the scrollbar invisible */
-
-}
 
 .topseller-container{
     -fx-background-color: #EFF4FA;
@@ -130,6 +124,7 @@
 .order-highlevel-container {
     -fx-background-color: #EFF4FA;
 }
+
 
 /* TabPane styling */
 .tab-pane {
@@ -209,19 +204,15 @@
 }
 /* end of tab styling */
 /* Cook styling */
-.list-pane {
+.list-pane-cook {
     -fx-background-color: white;
     -fx-border-color: transparent;
     -fx-background-radius: 10;
     -fx-border-radius: 10px;
 
 }
-.list-cell:filled:selected:focused,
-.list-cell:filled:selected,
-.list-cell:even,
-.list-cell:odd {
-    -fx-background-color: transparent;
-}
+
+
 .list-pane .scroll-bar:horizontal {
     -fx-opacity: 0;      /* Makes the scrollbar invisible */
 
@@ -535,114 +526,3 @@
     -fx-content-display:graphic-only;
 }
 
-
-/*============================ MENU ============================ */
-/* Root styling */
-
-
-/* ButtonBar styling */
-
-
-
-
-
-/* Tab Content */
-
-
-/* ListPane styling */
-
-
-/* Database Labels colour */
-
-
-/* Database Label text styling */
-
-
-/* Title styling */
-
-
-
-/*============================ USERS ============================ */
-/* Root styling */
-
-/* database labels colour*/
-
-
-
-/*============================ STOCK ============================ */
-/* Root styling */
-
-
-/*============================ ANALYTICS ============================ */
-/* Root styling */
-
-
-/* WAITER =====================================================================================================*/
-/*
- * Container styling
- */
-
-
-
-
-
-
-
-
-
-
-/**
-    * Button Styling
- */
-
-
-
-
-
-
-
-/**
-    * Text Styling
- */
-
-
-
-
-/**
-    * Tab Styling
- */
-
-
-
-
-
-
-
-/* COOK ========================================================================================= */
-
-/*
- * Container styling
- */
-
-
-
-
-
-
-
-
-
-
-/**
-    * Button Styling
- */
-
-
-
-/**
-    * Text Styling
- */
-
-/**
-    * Complete Order List Styling
- */
