--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/WaiterStage.fxml
@@ -93,7 +93,7 @@
                                         <Insets left="10.0" />
                                     </padding>
                                 </HBox>
-                                <ListView fx:id="orderitemslistview" prefHeight="200.0" prefWidth="200.0" styleClass="list-pane" VBox.vgrow="ALWAYS" />
+                                <ListView fx:id="orderitemslistview" prefHeight="200.0" prefWidth="200.0" styleClass="list-pane-waiter" VBox.vgrow="ALWAYS" />
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
                                         <HBox alignment="CENTER" layoutX="252.0" layoutY="10.0" spacing="10.0">
